Adding glass? Maybe?
Just gonna try to see if this works...

--- a/projects.json
+++ b/projects.json
@@ -77,7 +77,7 @@
 		"img_url": "imgs/glassemul.png",
 		"tags": "web angular uni",
 		"project_date": "April 2014",
-		"url": null //"http://glass.hejelin.se"
+		"url": "/glass/index.html"
 	},
 	{
 		"title": "Learn with (Google) Glass",
